# rust-text-file-utils

./: Cargo.toml  LICENSE  README.md  test.json
examples/: flatten_srt_directory.rs  parse_srt_file.rs  read_and_flatten.rs  unzip_file.rs
src/: lib.rs
src/cli/: cli_menu.rs  mod.rs
src/compound/: mod.rs  srt_processing.rs
src/config/: logger.rs
src/file/: json.rs  merge.rs  mod.rs  read.rs  unzip.rs  write.rs  zip.rs  zipinfo.rs
src/parser/: mod.rs  srt.rs
src/text/: clean.rs  flatten.rs  mod.rs  replace.rs  search.rs
src/tui/: mod.rs  tui_menu.rs
tests/: integration_tests.rs  mod.rs  unzip_tests.rs
tests/file_tests/: json_tests.rs  merge_tests.rs  mod.rs  read_tests.rs  unzip_tests.rs  write_tests.rs  zip_tests.rs
tests/integration/: integration_tests.rs
tests/text_tests/: clean_tests.rs  flatten_tests.rs  mod.rs  replace_tests.rs  search_tests.rs
