[package]
name = "rust-text-file-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex  = "1.5.4"
zip = "2.1.5"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.11", optional = true }
cursive = { version = "0.18", optional = true }
walkdir = "2.5.0"

[features]
default = []
cli = ["clap"]
tui = ["cursive"]

